fix overlapping clicking link

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 .Container {
-  display: flex;
-  flex: 1;
+  display: grid;
+  grid-template-columns: 3fr 2fr;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   justify-content: center;
